@@ -156,6 +156,7 @@ s32 run_world(void) {
 		update_sound(AGE_SND, elapsed);
 		render_canvas(AGE_CVS, elapsed);
 		update_canvas(AGE_CVS, elapsed);
+		collide_canvas(AGE_CVS, elapsed);
 		delay = EXPECTED_FRAME_TIME - (age_tick_count() - old);
 		if(delay > 0) {
 			age_sleep(delay);
